--- a/css/main.css
+++ b/css/main.css
@@ -14,7 +14,7 @@ body {
     align-items: center;
     justify-content: center;
     text-align: center;
-    position: relative;
+    position: absolute;
 }
 
 #logo {
@@ -36,13 +36,25 @@ body {
   margin: 2em;
 }
 
+.info {
+  position: relative;
+  display: flex;
+  flex-flow: row-reverse;
+  /* display: block; */
+  /* position: fixed; */
+
+
+}
 
 .info img {
   height: 3em;
   weight: 3em;
   margin: 1em;
   margin-bottom: 2em;
-  display: inline;
+
+  /* float:right; */
+
+  /* display: inline; */
 }
 
 /* .info {
