--- a/css/main.css
+++ b/css/main.css
@@ -1,5 +1,6 @@
 body {
-  background: url('../img/bg.png'), linear-gradient(0deg, rgba(15,80,120,1) 10%, rgba(23,146,163,1) 100%);
+  /* background: url('../img/bg_start.svg'), linear-gradient(0deg, rgba(15,80,120,1) 10%, rgba(23,146,163,1) 100%); */
+background: url('../img/bg1_test.png');
   background-repeat: no-repeat;
   background-size: 100% auto;
   background-position: center;
@@ -7,57 +8,60 @@ body {
 
 }
 
+/* .main {
+  display: flex;
+  flex-direction: column;
+  min-height: 100vh;
+} */
+
 .content {
-  height: 70%;
+  overflow: hidden;
+  height: 100%;
     display: flex;
     flex-direction: column;
     align-items: center;
     justify-content: center;
     text-align: center;
     position: absolute;
+    flex:1 auto;
+    padding: 1.5rem;
 }
 
 #logo {
-  width: 70%;
-  padding: 30px;
+  width: 80%;
+  padding-top: 100px;
   margin: 1em;
 }
 
 #code {
-  width: 70%;
-  padding: 30px;
+  width: 80%;
   margin: 2em;
 }
-
+#code_input {
+  width: 80%;
+}
 #code_button {
-  /* margin: auto; */
-  width: 6em;
+  width: 30%;
   padding: 10px;
   margin: 2em;
 }
 
-.info {
-  position: relative;
-  display: flex;
-  flex-flow: row-reverse;
-  /* display: block; */
-  /* position: fixed; */
-
-
-}
-
-.info img {
-  height: 3em;
-  weight: 3em;
-  margin: 1em;
-  margin-bottom: 2em;
+#info {
+  overflow: hidden;
   position: fixed;
-  /* float:right; */
+  top: 0;
+  width: 100%;
 
-  /* display: inline; */
 }
 
-/* .info {
-  display: inline-block;
-  text-align: left;
-} */
+#info img {
+  float: right;
+  height: 10%;
+  width: 10%;
+  /* height: 3em;
+  weight: 3em;
+  padding: 8px;
+  margin: 1em;
+  margin-bottom: 2em; */
+  /* position: fixed; */
+}
