--- a/css/main.css
+++ b/css/main.css
@@ -22,27 +22,27 @@ background: url('../img/bg1_test.png');
     align-items: center;
     justify-content: center;
     text-align: center;
-    position: absolute;
+    /* position: absolute; */
     flex:1 auto;
     padding: 1.5rem;
 }
 
 #logo {
-  width: 80%;
+  width: 25em;
   padding-top: 100px;
   margin: 1em;
 }
 
 #code {
-  width: 80%;
+  width: 20em;
   margin: 2em;
 }
 #code_input {
-  width: 80%;
+  width: 20em;
 }
 #code_button {
-  width: 30%;
-  padding: 10px;
+  width: 8em;
+  padding: 1px;
   margin: 2em;
 }
 
@@ -56,8 +56,8 @@ background: url('../img/bg1_test.png');
 
 #info img {
   float: right;
-  height: 10%;
-  width: 10%;
+  height: 5em;
+  width: 5em;
   /* height: 3em;
   weight: 3em;
   padding: 8px;
