--- a/css/main.css
+++ b/css/main.css
@@ -1,6 +1,6 @@
 body {
   /* background: url('../img/bg_start.svg'), linear-gradient(0deg, rgba(15,80,120,1) 10%, rgba(23,146,163,1) 100%); */
-background: url('../img/bg1_test.png');
+background: url('../img/bg_1_whole.png');
   background-repeat: no-repeat;
   background-size: 100% auto;
   background-position: center;
@@ -20,8 +20,8 @@ background: url('../img/bg1_test.png');
     display: flex;
     flex-direction: column;
     align-items: center;
-    justify-content: center;
-    text-align: center;
+    /* justify-content: center; */
+    /* text-align: center; */
     /* position: absolute; */
     flex:1 auto;
     padding: 1.5rem;
