--- a/css/main.css
+++ b/css/main.css
@@ -8,21 +8,12 @@ background: url('../img/bg_1_whole.png');
 
 }
 
-/* .main {
-  display: flex;
-  flex-direction: column;
-  min-height: 100vh;
-} */
-
 .content {
   overflow: hidden;
   height: 100%;
     display: flex;
     flex-direction: column;
     align-items: center;
-    /* justify-content: center; */
-    /* text-align: center; */
-    /* position: absolute; */
     flex:1 auto;
     padding: 1.5rem;
 }
@@ -35,8 +26,23 @@ background: url('../img/bg_1_whole.png');
 
 #code {
   width: 20em;
+  height: 3em;
+  opacity: 90%;
+  background-color: rgba(15,80,120,1);
+  text-align: center;
   margin: 2em;
+  border-radius: 15px;
 }
+
+#code::before{
+  content: "코드를 입력하세요";
+  color: white;
+  font-size: 2em;
+}
+/* #code {
+  width: 20em;
+  margin: 2em;
+} */
 #code_input {
   width: 20em;
 }
