--- a/css/main.css
+++ b/css/main.css
@@ -27,18 +27,18 @@ background: url('../img/bg_1_whole.png');
 #code {
   width: 20em;
   height: 3em;
-  opacity: 90%;
+  /* opacity: 90%; */
   background-color: rgba(15,80,120,1);
   text-align: center;
   margin: 2em;
   border-radius: 15px;
 }
 
-#code::before{
+/* #code::before{
   content: "코드를 입력하세요";
   color: white;
   font-size: 2em;
-}
+} */
 /* #code {
   width: 20em;
   margin: 2em;
@@ -71,3 +71,52 @@ background: url('../img/bg_1_whole.png');
   margin-bottom: 2em; */
   /* position: fixed; */
 }
+
+/* .overlay {
+  position: fixed;
+  top: 0;
+  bottom: 0;
+  left: 0;
+  right: 0;
+  background: rgba(0, 0, 0, 0.7);
+  transition: opacity 500ms;
+  visibility: hidden;
+  opacity: 0;
+}
+.overlay:target {
+  visibility: visible;
+  opacity: 1;
+}
+
+.popup {
+  margin: 70px auto;
+  padding: 20px;
+  background: #fff;
+  border-radius: 5px;
+  width: 70%;
+  position: relative;
+  transition: all 5s ease-in-out;
+}
+
+.popup h2 {
+  margin-top: 0;
+  color: #333;
+  font-family: Tahoma, Arial, sans-serif;
+}
+.popup .close {
+  position: absolute;
+  top: 20px;
+  right: 30px;
+  transition: all 200ms;
+  font-size: 30px;
+  font-weight: bold;
+  text-decoration: none;
+  color: #333;
+}
+.popup .close:hover {
+  color: #06D85F;
+}
+.popup .content {
+  max-height: 30%;
+  overflow: auto;
+} */
