--- a/css/main.css
+++ b/css/main.css
@@ -10,15 +10,12 @@
 
 
 body {
-   /* display: flex; */
    height:100vh;
-   /* top:-10px; */
    bottom:0;
    align-items:center;
    background: url('../img/bg1_top.svg ');
    background-position: relative;
    background-size:cover;
-   /* background-position: center; */
    background-repeat: no-repeat;
    overflow:hidden;
 
@@ -42,7 +39,6 @@ body {
 
 }
 
-
 .bg-box {
     width:100%;
     height:100vh;
@@ -55,10 +51,9 @@ body {
     z-index:-1;
 }
 
-
 .content {
   overflow: hidden;
-  height: 100%;
+  height: 100vh;
     display: flex;
     flex-direction: column;
     align-items: center;
@@ -67,13 +62,13 @@ body {
 }
 
 #logo {
-  width: 25em;
-  padding-top: 100px;
+  width: min(80%, 25em);
+  padding-top: min(10%, 100px);
   margin: 1em;
 }
 
 .text-box {
-  width: 20em;
+  width: min(75%, 20em);
   height: auto;
   /* opacity: 50%; */
   background-color: rgba(15,80,120,1);
@@ -82,21 +77,28 @@ body {
   border-radius: 15px;
 }
 
+/* .text-box img {
+  width: min(75%, 20em);
+} */
+
+#start-game-img {
+  width: min(75%, 20em);
+}
 #code::before{
   content: "코드를 입력하세요";
   color: white;
-  font-size: 2em;
+  font-size: min(7vw, 2em);
 }
 
-#start-game-img::before {
-  content: url('../img/gamestart.png')
-}
+/* #start-game-img::before {
+  content: url('../img/gamestart.png');
+} */
 
 #code_input {
-  width: 20em;
+  width: min(75%, 20em);
 }
 .blue_button {
-  width: 8em;
+  width: min(20vw, 8em);
   padding: 1px;
   margin: 2em;
 }
@@ -111,8 +113,8 @@ body {
 
 #info img {
   float: right;
-  height: 5em;
-  width: 5em;
+  /* height: 5em; */
+  width: min(20vw, 5em);
   /* height: 3em;
   weight: 3em;
   padding: 8px;
@@ -137,10 +139,10 @@ body {
 
 .overlay-content {
   background-color: #f4f4f4;
-  margin: 0 0 0 20%;
+  margin: 0 0 0 calc(100vw - 25em);
   padding: 20px;
-  width: 80%;
-  height: 25em;
+  width: min(100%, 25em);
+  height: min(80%,25em);
   box-shadow: 0 5px 8px 0 rgba(0, 0, 0, 0.2), 0 7px 20px 0 rgba(0, 0, 0, 0.2);
   display: flex;
   flex-direction: column;
@@ -149,6 +151,7 @@ body {
   border-radius: 10px;
   background: rgb(255,255,255);
 background: linear-gradient(180deg, rgba(255,255,255,1) 29%, rgba(203,243,249,1) 100%);
+
 
 }
 
