--- a/css/main.css
+++ b/css/main.css
@@ -1,24 +1,20 @@
 /* body { */
-  /* background: url('../img/bg_start.svg'), linear-gradient(0deg, rgba(15,80,120,1) 10%, rgba(23,146,163,1) 100%); */
+/* background: url('../img/bg_start.svg'), linear-gradient(0deg, rgba(15,80,120,1) 10%, rgba(23,146,163,1) 100%); */
 /* background: url('../img/bg_1_whole.png'); */
-  /* background-repeat: no-repeat; */
-  /* background-size: 100% auto; */
-  /* background-position: center; */
-  /* background-attachment: fixed; */
-
+/* background-repeat: no-repeat; */
+/* background-size: 100% auto; */
+/* background-position: center; */
+/* background-attachment: fixed; */
 /* }  */
-
-
 body {
-   height:100vh;
-   bottom:0;
-   align-items:center;
-   background: url('../img/bg1_top.svg ');
-   background-position: relative;
-   background-size:cover;
-   background-repeat: no-repeat;
-   overflow:hidden;
-
+  height: 100vh;
+  bottom: 0;
+  align-items: center;
+  background: url('../img/bg1_top.svg ');
+  background-position: relative;
+  background-size: cover;
+  background-repeat: no-repeat;
+  overflow: hidden;
 }
 
 .main {
@@ -27,38 +23,36 @@ body {
   justify-content: center;
 }
 
-
 .bg-container {
-    position: fixed;
-    width:calc(max(120%,330px));
-    height:calc(max(150px,35%));
-    bottom:0px;
-    right:0px;
-    left:-10px;
-    z-index:-2;
-
+  position: fixed;
+  width: calc(max(120%, 330px));
+  height: calc(max(150px, 35%));
+  bottom: 0px;
+  right: 0px;
+  left: -10px;
+  z-index: -2;
 }
 
 .bg-box {
-    width:100%;
-    height:100vh;
-    /* position:relative; */
-    background-size: cover;
-    background-repeat: no-repeat;
-    background-position: center bottom fixed;
-    bottom:0px;
-    /* padding-top:calc(max(400px,50%)); */
-    z-index:-1;
+  width: 100%;
+  height: 100vh;
+  /* position:relative; */
+  background-size: cover;
+  background-repeat: no-repeat;
+  background-position: center bottom fixed;
+  bottom: 0px;
+  /* padding-top:calc(max(400px,50%)); */
+  z-index: -1;
 }
 
 .content {
   overflow: hidden;
   height: 100vh;
-    display: flex;
-    flex-direction: column;
-    align-items: center;
-    flex:1 auto;
-    padding: 1.5rem;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  flex: 1 auto;
+  padding: 1.5rem;
 }
 
 #logo {
@@ -71,7 +65,7 @@ body {
   width: min(75%, 20em);
   height: auto;
   /* opacity: 50%; */
-  background-color: rgba(15,80,120,1);
+  background-color: rgba(15, 80, 120, 1);
   text-align: center;
   margin: 2em;
   border-radius: 15px;
@@ -80,11 +74,11 @@ body {
 /* .text-box img {
   width: min(75%, 20em);
 } */
-
 #start-game-img {
   width: min(75%, 20em);
 }
-#code::before{
+
+#code::before {
   content: "코드를 입력하세요";
   color: white;
   font-size: min(7vw, 2em);
@@ -93,10 +87,10 @@ body {
 /* #start-game-img::before {
   content: url('../img/gamestart.png');
 } */
-
 #code_input {
   width: min(75%, 20em);
 }
+
 .blue_button {
   width: min(20vw, 8em);
   padding: 1px;
@@ -108,7 +102,6 @@ body {
   position: fixed;
   top: 0;
   width: 100%;
-
 }
 
 #info img {
@@ -125,16 +118,15 @@ body {
 
 .overlay {
   display: none;
-  position:fixed;
+  position: fixed;
   z-index: 1;
-  left:0;
-  top:0;
+  left: 0;
+  top: 0;
   height: 100%;
   width: 100%;
   overflow: auto;
-  background-color: rgba(0,0,0,0.5);
+  background-color: rgba(0, 0, 0, 0.5);
   /* background-color: white; */
-
 }
 
 .overlay-content {
@@ -142,17 +134,15 @@ body {
   margin: 0 0 0 0;
   padding: 20px;
   width: min(100%, 25em);
-  height: min(80%,25em);
+  height: min(80%, 25em);
   box-shadow: 0 5px 8px 0 rgba(0, 0, 0, 0.2), 0 7px 20px 0 rgba(0, 0, 0, 0.2);
   display: flex;
   flex-direction: column;
   justify-content: center;
   align-items: center;
   border-radius: 10px;
-  background: rgb(255,255,255);
-background: linear-gradient(180deg, rgba(255,255,255,1) 29%, rgba(203,243,249,1) 100%);
-
-
+  background: rgb(255, 255, 255);
+  background: linear-gradient(180deg, rgba(255, 255, 255, 1) 29%, rgba(203, 243, 249, 1) 100%);
 }
 
 .closeBtn {
@@ -169,7 +159,6 @@ background: linear-gradient(180deg, rgba(255,255,255,1) 29%, rgba(203,243,249,1)
   width: 2.5em;
   height: 2.5em;
 }
-
 
 .closeBtn:hover, .closeBtn:focus {
   color: #000;
