--- a/css/stage.css
+++ b/css/stage.css
@@ -12,7 +12,7 @@ body {
 
 .bg-bottom {
   position: fixed;
-  width: 130%;
+  width: 100%;
   bottom: -5vh;
   z-index: -1;
 }
@@ -26,13 +26,104 @@ body {
 }
 
 .read-info {
-  margin-top: min(30vw, 5em);
+  margin-top: min(10vw, 3em);
   text-align: center;
   font-family: yangjinv09_ttf;
-  font-size: min(5vw, 2em);
+  font-size: min(5vw, 1.8em);
   line-height: max(2vh,0.5em);
 }
 
 .stage-img {
   width: min(60vw, 20em);
+}
+
+.next-button {
+  width: min(20vw, 4em);
+  padding: 1px;
+  margin: 1em;
+  cursor: pointer;
+  /* margin-left: auto; */
+  margin-left: min(50vw, 18em);
+  filter: drop-shadow( 0.5rem 0.5rem 0.5rem rgba(0,0,0,0.5) );
+}
+
+#answer1 {
+  width: min(60vw, 20em);
+  border-radius: 2em;
+
+}
+.answer-input {
+  text-align:center;
+}
+
+/* .answer-div {
+  width: 95vw;
+    height: 100px;
+    text-align: center;
+    /* white-space: nowrap; */
+    /* overflow-x: auto; */
+} */
+
+/* .answer-e {
+  display: inline-block;
+}   */
+
+
+/* hint modal popup css */
+.overlay {
+  display: none;
+  position: fixed;
+  z-index: 1;
+  height: 100%;
+  width: 100%;
+  overflow: auto;
+  background-color: rgba(0, 0, 0, 0.5);
+}
+
+.hint-overlay {
+  position: absolute;
+    bottom: 0;
+    right: 0;
+}
+
+.close-btn {
+  top:2em;
+  right: 2em;
+  color: #ccc;
+  position: absolute;
+}
+
+#hintCloseBtn {
+  float: right;
+  width: 2.5em;
+  height: 2.5em;
+}
+
+.close-btn:hover, .close-btn:focus {
+  color: #000;
+  text-decoration: none;
+  cursor: pointer;
+}
+
+.box-description {
+  border-radius: 10px;
+  border-color: grey;
+  border-style: dashed;
+  padding: 1em;
+  border-width: medium;
+  font-family: 'NanumSquareRoundR';
+}
+
+.img-top-hint {
+  position: absolute;
+  top:4em;
+  left: 2em;
+  width: 10em;
+}
+
+.img-bottom-hint {
+  position: absolute;
+  bottom: 2em;
+  right: 2em;
+  width: 7em;
 }
