--- a/css/start.css
+++ b/css/start.css
@@ -8,3 +8,49 @@ body {
   background-repeat: no-repeat;
   overflow: hidden;
 }
+
+
+/* contents css */
+.logo-image {
+  width: min(80%, 25em);
+  padding-top: min(10%, 100px);
+  margin: 1em;
+}
+
+.shade-text-box {
+  width: min(75%, 20em);
+  height: auto;
+  opacity: 90%;
+  background-color: rgba(15, 80, 120, 1);
+  text-align: center;
+  /* margin: auto; */
+  border-radius: 10px;
+  font-family: yangjinv09_ttf;
+  letter-spacing: 0.2em;
+  margin: 2em;
+}
+
+.shade-text-box p {
+  color: white;
+  text-align: center;
+  /* padding-top: 0.em; */
+  padding: 0;
+  margin: 0;
+  font-size: min(7vw, 2em);
+}
+
+.shade-text-box img {
+  width: min(75%, 20em);
+}
+
+.code-text-input {
+  width: min(75%, 20em);
+}
+
+.start-button {
+  width: min(20vw, 4em);
+  padding: 1px;
+  margin: 2em;
+  cursor: pointer;
+  -webkit-filter: drop-shadow( 0px 0px 0px rgba(0,0,0,0) );
+}
