--- a/css/stage.css
+++ b/css/stage.css
@@ -77,8 +77,8 @@ body {
 }
 
 .close-btn {
-  top:2em;
-  right: 2em;
+  top:2vh;
+  right: 3vw;
   color: #ccc;
   position: absolute;
 }
@@ -106,14 +106,14 @@ body {
 
 .img-top-hint {
   position: absolute;
-  top:4em;
+  top: 6vh;
   left: 2em;
-  width: 10em;
+  width: 40vw;
 }
 
 .img-bottom-hint {
   position: absolute;
-  bottom: 2em;
+  bottom: 5vh;
   right: 2em;
-  width: 7em;
+  width: 25vw;
 }
