--- a/css/main.css
+++ b/css/main.css
@@ -18,11 +18,11 @@
     src: url('../fonts/yangjinv09_ttf.ttf'); /*URL to font*/
 }
 
-.main {
+/* .main {
   display: flex;
   align-items: center;
   justify-content: center;
-}
+} */
 
 .bg-container {
   position: fixed;
@@ -77,7 +77,7 @@
 /* modal popup css */
 .overlay {
   display: none;
-  position: fixed;
+  /* position: fixed; */
   z-index: 1;
   height: 100%;
   width: 100%;
