--- a/css/main.css
+++ b/css/main.css
@@ -77,7 +77,7 @@
 /* modal popup css */
 .overlay {
   display: none;
-  /* position: fixed; */
+  position: fixed;
   z-index: 1;
   height: 100%;
   width: 100%;
