--- a/css/main.css
+++ b/css/main.css
@@ -91,8 +91,10 @@
   /* float: right; */
   margin: 0 0 0 0;
   padding: 20px;
+  /* width: min(100%, 25em);
+  height: min(80%, 25em); */
   width: min(100%, 25em);
-  height: min(80%, 25em);
+  height: 25em;
   box-shadow: 0 5px 8px 0 rgba(0, 0, 0, 0.2), 0 7px 20px 0 rgba(0, 0, 0, 0.2);
   display: flex;
   flex-direction: column;
