--- a/css/stage.css
+++ b/css/stage.css
@@ -107,7 +107,8 @@ body {
 .img-top-hint {
   position: absolute;
   /* margin-botom: -10px; */
-  top: 2.5em;
+  top:  2.5em;
+  /* top: 2.5em; */
   left: 2em;
   width: 8em;
 }
