--- a/css/main.css
+++ b/css/main.css
@@ -131,7 +131,7 @@
 }
 
 .box-description {
-  width: 22em;
+  width: min(80vw,22em);
   height: 16em;
   border-radius: 10px;
   border-color: grey;
