--- a/css/main.css
+++ b/css/main.css
@@ -82,6 +82,7 @@
   width: 100%;
   overflow: auto;
   background-color: rgba(0, 0, 0, 0.5);
+  transition: all .4s;
 }
 
 .overlay-content {
@@ -103,6 +104,7 @@
   background: rgb(255, 255, 255);
   background: linear-gradient(180deg, rgba(255, 255, 255, 1) 29%, rgba(203, 243, 249, 1) 100%);
   position: relative;
+  animation: appear 350ms ease-in 1;
 }
 
 .info-overlay {
