--- a/css/stage.css
+++ b/css/stage.css
@@ -66,11 +66,18 @@ body {
   filter: drop-shadow( 0.5rem 0.5rem 0.5rem rgba(0,0,0,0.5) );
 }
 
-#answer1 {
+/* used in ticket modal */
+.button-loc {
+  position: absolute;
+  bottom: 2em;
+  right: 2em;
+}
+
+#answer {
   width: min(60vw, 20em);
   border-radius: 2em;
-
 }
+
 .answer-input {
   width: min(75%, 20em);
   text-align:center;
@@ -94,9 +101,10 @@ body {
 }
 
 .hint-overlay {
+  background: linear-gradient(180deg, rgba(255, 255, 255, 1) 29%, rgba(203, 243, 249, 1) 100%);
   position: absolute;
-    bottom: 0;
-    right: 0;
+  bottom: 0;
+  right: 0;
 }
 
 .ticket-overlay {
@@ -104,9 +112,6 @@ body {
   top: 100%;
   left: 50%;
   transform: translate(-50%, -100%);
-  /* top: 50%; */
-  /* top: 50%; */
-
 }
 
 .ticket-ani {
@@ -146,6 +151,12 @@ body {
   padding: 1em;
   border-width: medium;
   font-family: 'NanumSquareRoundR';
+
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  justify-content: center;
+
 }
 
 .img-top-hint {
