--- a/css/stage.css
+++ b/css/stage.css
@@ -114,6 +114,14 @@ body {
   transform: translate(-50%, -100%);
 }
 
+.danger-overlay {
+  background-image: url('./img/stage6/sta-6-1.png')
+  position: absolute;
+  top: 100%;
+  left: 50%;
+  transform: translate(-50%, -100%);
+}
+
 .ticket-ani {
   width: 70%;
   animation-name: example;
