--- a/css/stage.css
+++ b/css/stage.css
@@ -204,3 +204,66 @@ body {
 li{
     margin-top: 1.5em;
 }
+
+.dot-display {
+  display: none;
+  position: fixed;
+  z-index: 1;
+  height: 100%;
+  width: 100%;
+  overflow: auto;
+  background-color: black;
+  align-items: center;
+  justify-content: center;
+}
+
+.dot {
+  position: relative;
+  height: 10px;
+  width: 10px;
+  background-color: white;
+  border-radius: 50%;
+
+  animation: wait 3.5s infinite alternate;
+  animation-delay: 1.5s
+}
+
+.dot::before {
+  content: '';
+  display: inline-block;
+  position: absolute;
+  top: 0;
+  left: -30px;
+  height: 10px;
+  width: 10px;
+  background-color: white;
+  border-radius: 50%;
+
+  animation: wait 3.5s infinite alternate;
+  animation-delay: 2.5s
+}
+
+.dot::after {
+  content: '';
+  display: inline-block;
+  position: absolute;
+  top: 0;
+  left: 30px;
+  height: 10px;
+  width: 10px;
+  background-color: white;
+  border-radius: 50%;
+
+  animation: wait 3.5s infinite alternate;
+  animation-delay: 0.5s
+}
+
+@keyframes wait {
+  0% {
+    background-color: black;
+  }
+  50%,
+  100% {
+    background-color: black;
+  }
+}
