--- a/css/stage.css
+++ b/css/stage.css
@@ -4,12 +4,6 @@ body {
   bottom: 0;
   align-items: center;
   background: rgb(255,255,255);
-  /* background: linear-gradient(180deg, rgba(255,255,255,1) 32%, rgba(152,190,223,1) 84%);
-  background-position: relative;
-  background-size: cover;
-  background-repeat: no-repeat; */
-
-
   overflow: hidden;
 }
 
@@ -30,6 +24,22 @@ body {
 
 .filter {
   backdrop-filter: brightness(30%);
+}
+
+/* gradient filter */
+.filter-g {
+}
+
+.filter-g:before {
+  content: "";
+  position: absolute;
+  top: 0;
+  bottom: 0;
+  left: 0;
+  right: 0;
+  background-image: linear-gradient(70deg, rgba(173,173,173,1) 5%, rgba(0,0,0,1) 60%);
+  opacity: 0.65;
+  z-index: -1;
 }
 
 /* .bg-bottom {
@@ -54,7 +64,6 @@ body {
   top: 10vh;
   left: 30vw;
   z-index: -2;
-
 }
 
 .run-fish {
@@ -74,23 +83,33 @@ body {
   font-family: yangjinv09_ttf;
   font-size: min(5vw, 1.5em);
   line-height: max(1.5vh,0.5em);
+  color: #004466;
 }
 
 .grey-color {
   color: #DCDCDC;
 }
 
-
 .next-button {
   width: min(20vw, 3em);
   padding: 1px;
   margin: 0.5em;
   cursor: pointer;
-  /* margin-left: auto; */
   margin-left: min(50vw, 18em);
-  filter: drop-shadow( 0.5rem 0.5rem 0.5rem rgba(0,0,0,0.5) );
+  /* filter: drop-shadow( 0.5rem 0.5rem 0.5rem rgba(0,0,0,0.5) ); */
 }
-
+.end-container {
+  position: relative;
+  text-align: center;
+  font-family: yangjinv09_ttf;
+  color: grey;
+}
+.end-button {
+  position: absolute;
+  top: 50%;
+  left: 20px;
+  transform: translate(0, -65%);
+}
 /* used in ticket modal */
 .button-loc {
   position: absolute;
@@ -111,8 +130,6 @@ body {
 /* hint modal popup css */
 .overlay {
   display: none;
-  /* position: fixed; */
-
   z-index: 1;
   height: 100%;
   width: 100%;
@@ -157,7 +174,10 @@ body {
   margin-bottom: 1em;
 }
 
-
+.stage-img-sml {
+  width: min(40vw, 8em);
+  margin-bottom: 1em;
+}
 
 .stage-img-left {
   width: 8em;
