--- a/css/main.css
+++ b/css/main.css
@@ -63,13 +63,14 @@
 }
 
 .contents {
-  height: 90vh;
+  height: 100vh;
   display: flex;
   flex-direction: column;
   align-items: center;
   justify-content: center;
   flex: 1 auto;
   padding: 1.5rem;
+  overflow-y: scroll;
 
 }
 
