--- a/css/main.css
+++ b/css/main.css
@@ -48,8 +48,9 @@
 }
 
 .info {
-  overflow: hidden;
-  position: fixed;
+  /* overflow: hidden; */
+  /* position: fixed; */
+
   top: 1em;
   right: 1em;
   width: 100%;
@@ -67,10 +68,15 @@
   display: flex;
   flex-direction: column;
   align-items: center;
-  justify-content: center;
+  justify-content:flex-start;
   flex: 1 auto;
   padding: 1.5rem;
   overflow-y: scroll;
+
+  /* margin-top: min(10vh, 10em);
+  height: min(75%, 800px);
+  width: 100%;
+  z-index:0; */
 
 }
 
