--- a/css/main.css
+++ b/css/main.css
@@ -31,7 +31,7 @@
 
 .bg-box {
   width: 100%;
-  height: 100vh;
+  /* height: 100vh; */
   background-size: cover;
   background-repeat: no-repeat;
   background-position: center bottom fixed;
@@ -64,7 +64,7 @@
 }
 
 .contents {
-  height: 100vh;
+  /* height: 100vh; */
   display: flex;
   flex-direction: column;
   align-items: center;
