--- a/css/stage.css
+++ b/css/stage.css
@@ -1,10 +1,10 @@
 
 body {
-  height: 100vh;
+  /* height: 100vh; */
   bottom: 0;
   align-items: center;
   background: rgb(255,255,255);
-  overflow: hidden;
+  /* overflow: hidden; */
 }
 
 .bg-1 {
