--- a/css/stage.css
+++ b/css/stage.css
@@ -1,6 +1,10 @@
 
-body {
+html {
   height: 100vh;
+}
+
+body {
+  height: 100%;
   bottom: 0;
   align-items: center;
   background: rgb(255,255,255);
