--- a/css/stage.css
+++ b/css/stage.css
@@ -1,13 +1,13 @@
-
+/*
 html {
   height: 100vh;
-}
+} */
 
 body {
-  height: 100%;
-  bottom: 0;
-  align-items: center;
-  background: rgb(255,255,255);
+  /* height: 100%; */
+  /* bottom: 0; */
+  /* align-items: center; */
+  /* background: rgb(255,255,255); */
   /* overflow: hidden; */
 }
 
