--- a/css/stage.css
+++ b/css/stage.css
@@ -4,7 +4,7 @@ html {
 } */
 
 body {
-  /* height: 100%; */
+  /* height: auto; */
   /* bottom: 0; */
   /* align-items: center; */
   /* background: rgb(255,255,255); */
