--- a/css/main.css
+++ b/css/main.css
@@ -68,7 +68,10 @@
   display: flex;
   flex-direction: column;
   align-items: center;
-  justify-content:flex-start;
+  /* justify-content: center; */
+  /* justify-content: space-between; */
+  /* justify-content:flex-start; */
+  /* align-content: space-between; */
   flex: 1 auto;
   padding: 1.5rem;
   overflow-y: scroll;
