--- a/css/stage.css
+++ b/css/stage.css
@@ -5,6 +5,7 @@ html {
 
 body {
   height: 100vh;
+  height: calc(var(--vh, 1vh) * 100);
   /* bottom: 0; */
   /* align-items: center; */
   /* background: rgb(255,255,255); */
@@ -166,6 +167,8 @@ body {
 .contents > div:not(:only-child):last-of-type {
     margin-top: auto;
 }
+
+
 
 
 /* hint modal popup css */
