--- a/css/stage.css
+++ b/css/stage.css
@@ -2,10 +2,14 @@
 html {
   height: 100vh;
 } */
+html {
+  height: -webkit-fill-available;
+}
 
 body {
-  height: 100vh;
-  height: calc(var(--vh, 1vh) * 100);
+  min-height: 100vh;
+  min-height: -webkit-fill-available;
+  /* height: calc(var(--vh, 1vh) * 100); */
   /* bottom: 0; */
   /* align-items: center; */
   /* background: rgb(255,255,255); */
