--- a/css/main.css
+++ b/css/main.css
@@ -65,6 +65,7 @@
 
 .contents {
   height: 100vh;
+  height: -webkit-fill-available;
   display: flex;
   flex-direction: column;
   align-items: center;
