--- a/css/stage.css
+++ b/css/stage.css
@@ -168,10 +168,10 @@ body {
 .answer-input {
   /* width: min(75%, 20em); */
   /* margin-top: auto; */
-  width: 200px;
+  width: 12em;
   text-align:center;
   border-radius: 2em;
-  margin-right: 15px
+  margin-right: 15px;
 }
 
 .contents > div:not(:only-child):last-of-type {
