--- a/css/stage.css
+++ b/css/stage.css
@@ -171,7 +171,7 @@ body {
   width: 12em;
   text-align:center;
   border-radius: 2em;
-  margin-right: 15px;
+  margin-right: 0.5em;
 }
 
 .contents > div:not(:only-child):last-of-type {
