--- a/css/main.css
+++ b/css/main.css
@@ -64,8 +64,8 @@
 }
 
 .contents {
-  height: 100vh;
-  height: -webkit-fill-available;
+  /* height: 100vh; */
+  min-height: -webkit-fill-available;
   display: flex;
   flex-direction: column;
   align-items: center;
