--- a/css/stage.css
+++ b/css/stage.css
@@ -7,8 +7,8 @@ html {
 } */
 
 body {
-  height: 100vh;
-  /* min-height: -webkit-fill-available; */
+  /* height: 90vh; */
+  min-height: -webkit-fill-available;
   /* height: calc(var(--vh, 1vh) * 100); */
   /* bottom: 0; */
   /* align-items: center; */
@@ -32,8 +32,21 @@ body {
 
 
 .filter {
-  backdrop-filter: brightness(30%);
+  /* backdrop-filter: brightness(30%); */
 }
+.filter:before {
+  content: "";
+  position: absolute;
+  top: 0;
+  bottom: 0;
+  left: 0;
+  right: 0;
+  background: black;
+  /* background-image: linear-gradient(70deg, rgba(173,173,173,1) 5%, rgba(0,0,0,1) 60%); */
+  opacity: 0.65;
+  z-index: -1;
+}
+
 
 /* gradient filter */
 .filter-g {
@@ -141,8 +154,8 @@ body {
 /* used in ticket modal */
 .button-loc {
   position: absolute;
-  bottom: 2em;
-  right: 2em;
+  bottom: -1em;
+  right: 1em;
 }
 
 #answer {
@@ -151,12 +164,11 @@ body {
 }
 
 .answer-box {
+  margin-top: auto;
   display: inline-flex;
   position: relative;
-  /* justify-content: bottom; */
   align-items: center;
   flex: 0 0 10%;
-
 }
 
 .end-buttons {
@@ -174,9 +186,9 @@ body {
   margin-right: 0.5em;
 }
 
-.contents > div:not(:only-child):last-of-type {
+/* .contents > div:not(:only-child):last-of-type {
     margin-top: auto;
-}
+} */
 
 
 
