--- a/css/stage.css
+++ b/css/stage.css
@@ -405,7 +405,7 @@ button {
 @media screen and (max-height: 800px) {
   .read-info {
     font-size: min(5vw, 1.3em);
-    margin-top: min(5vw, 1.5em);
+    margin-top: 0.5em;
     line-height: 0.4em;
   }
 
