--- a/css/stage.css
+++ b/css/stage.css
@@ -405,7 +405,7 @@ button {
 @media screen and (max-height: 800px) {
   .read-info {
     font-size: min(4vw, 1.1em);
-    margin-top: 0.5em;
+    margin-top: 0;
     line-height: 0.4em;
   }
 
