--- a/css/stage.css
+++ b/css/stage.css
@@ -412,4 +412,10 @@ button {
   .stage-img {
     width: min(60vw, 20em);
   }
+
+  .stage-img-sml {
+    width: min(250vw, 5em);
+    margin-bottom: 0.5em;
+
+  }
 }
