--- a/css/main.css
+++ b/css/main.css
@@ -64,7 +64,7 @@
 }
 
 .contents {
-  /* height: 100vh; */
+  max-height: 100vh;
   min-height: -webkit-fill-available;
   display: flex;
   flex-direction: column;
