--- a/css/main.css
+++ b/css/main.css
@@ -64,8 +64,9 @@
 }
 
 .contents {
-  max-height: 100vh;
-  min-height: -webkit-fill-available;
+  /* max-height: 100vh;
+  min-height: -webkit-fill-available; */
+  height: 100vh;
   display: flex;
   flex-direction: column;
   align-items: center;
