--- a/css/main.css
+++ b/css/main.css
@@ -64,9 +64,11 @@
 }
 
 .contents {
-  /* max-height: 100vh;
-  min-height: -webkit-fill-available; */
   height: 100vh;
+  /* min-height: -webkit-fill-available; */
+  /* height: min(100vh, 800px); */
+  /* height: 100vh; */
+  /* width: 100%; */
   display: flex;
   flex-direction: column;
   align-items: center;
@@ -74,9 +76,10 @@
   /* justify-content: space-between; */
   /* justify-content:flex-start; */
   /* align-content: space-between; */
-  flex: 1 auto;
+
+  /* flex: 1 auto; */
   padding: 1rem;
-  overflow-y: scroll;
+  /* overflow-y: scroll; */
 
 }
 
