--- a/css/stage.css
+++ b/css/stage.css
@@ -7,15 +7,19 @@ html {
 } */
 
 body {
-  /* max-height: 100vh;
-  min-height: -webkit-fill-available; */
-  height: 100%;
-  height: calc(100vh - calc(100vh - 100%));
+  /* max-height: 100vh; */
+  min-height: -webkit-fill-available;
+  /* height: 100%; */
+  /* height: calc(100vh - calc(100vh - 100%)); */
   /* height: calc(var(--vh, 1vh) * 100); */
   /* bottom: 0; */
   /* align-items: center; */
   /* background: rgb(255,255,255); */
   /* overflow: hidden; */
+  /* margin: 0;
+  background-size: cover;
+    background-repeat: no-repeat;
+    overflow: auto; */
 }
 
 .bg-1 {
