--- a/css/main.css
+++ b/css/main.css
@@ -64,9 +64,12 @@
 }
 
 .contents {
-  height: 100vh;
-  /* min-height: -webkit-fill-available; */
-  /* height: min(100vh, 800px); */
+  /* height: 100vh; */
+  height: calc(var(--vh, 1vh) * 100);
+  /* height: 100vh; */
+  /* max-height: -webkit-fill-available; */
+  /* height: min(80%, 800px); */
+  /* height: min(75%, 800px); */
   /* height: 100vh; */
   /* width: 100%; */
   display: flex;
