--- a/css/stage.css
+++ b/css/stage.css
@@ -7,10 +7,10 @@ html {
 } */
 
 body {
-  /* max-height: 100vh; */
+  height: 100vh;
   /* min-height: -webkit-fill-available; */
-  height: 100%;
-  height: calc(100vh - calc(100vh - 100%));
+  /* height: 100%; */
+  /* height: calc(100vh - calc(100vh - 100%)); */
   /* height: calc(var(--vh, 1vh) * 100); */
   /* bottom: 0; */
   /* align-items: center; */
