--- a/css/main.css
+++ b/css/main.css
@@ -64,7 +64,7 @@
 }
 
 .contents {
-  /* height: 100vh; */
+  height: 100vh;
   height: calc(var(--vh, 1vh) * 100);
   /* height: 100vh; */
   /* max-height: -webkit-fill-available; */
