--- a/css/main.css
+++ b/css/main.css
@@ -65,7 +65,8 @@
 
 .contents {
   height: 100vh;
-  height: calc(var(--vh, 1vh) * 100);
+  max-height: -webkit-fill-available;
+  /* height: calc(var(--vh, 1vh) * 100); */
   /* height: 100vh; */
   /* max-height: -webkit-fill-available; */
   /* height: min(80%, 800px); */
