--- a/css/stage.css
+++ b/css/stage.css
@@ -8,7 +8,7 @@ html {
 
 body {
   height: 100vh;
-  /* min-height: -webkit-fill-available; */
+  max-height: -webkit-fill-available;
   /* height: 100%; */
   /* height: calc(100vh - calc(100vh - 100%)); */
   /* height: calc(var(--vh, 1vh) * 100); */
