--- a/css/stage.css
+++ b/css/stage.css
@@ -32,8 +32,9 @@ body {
 .bg-2 {
   background: url('../img/bg/bg_bottom4.svg') ,linear-gradient(180deg, rgba(255,255,255,1) 32%, rgba(152,190,223,1) 84%);
   background-position: center bottom, center 0px;
-  background-size: 100%, cover;
+  background-size: 100vh, cover;
   background-repeat: no-repeat, no-repeat;
+  /* height: 100vh; */
 }
 
 
