--- a/css/stage.css
+++ b/css/stage.css
@@ -126,13 +126,26 @@ body {
   /* margin: 0.5em; */
   cursor: pointer;
   margin-left: min(50vw, 18em);
+
   /* margin-bottom: 50px; */
   /* bottom: 0; */
-  /* filter: drop-shadow( 0.5rem 0.5rem 0.5rem rgba(0,0,0,0.5) ); */
+  filter: drop-shadow( 0.5rem 0.5rem 0.5rem rgba(0,0,0,0.5) );
+  transition-duration: 0.1s;
+}
+
+.next-button:active {
+  margin-top: 2px;
+  filter: drop-shadow( 0.1rem 0.1rem 0.1rem rgba(0,0,0,0.5) );
 }
 
 .next-button-answer {
   width: 3em;
+  filter: drop-shadow( 0.5rem 0.5em 0.5em rgba(0,0,0,0.5) );
+}
+
+.next-button-answer:active {
+  margin-top: 2px;
+  filter: drop-shadow( 0.1rem 0.1rem 0.1rem rgba(0,0,0,0.5) );
 }
 .end-container {
   position: relative;
@@ -189,6 +202,7 @@ body {
   position: relative;
   align-items: center;
   flex: 0 0 10%;
+  /* transition-duration: 1s; */
 }
 
 .end-buttons {
